eclipseのプロジェクト設定をcommit
git-svn-id: svn://192.168.0.6/devel/ruby/twoB/trunk@513 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Tue Nov 11 11:25:20 JST 2008
+#Fri Oct 09 13:03:21 JST 2009
 eclipse.preferences.version=1
 encoding//testData/2ch=MS932
 encoding//testData/jbbs=EUC-JP
+encoding/<project>=UTF-8
