--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -5,7 +5,7 @@ server.modules              = (
 
 ## a static document-root, for virtual-hosting take look at the 
 ## server.virtual-* options
-server.document-root       = "/home/tachibana/devel/ruby"
+server.document-root       = "."
 
 ## files to check for if .../ is requested
 index-file.names           = ( "index.php", "index.html",
@@ -25,7 +25,7 @@ server.port               = 8081
 server.bind                = "localhost"
 
 ## to help the rc.scripts
-server.pid-file            = "lighttpd/lighttpd.pid"
+server.pid-file            = "lighttpd/pid"
 
 ## virtual directory listings
 dir-listing.encoding        = "utf-8"
@@ -44,7 +44,7 @@ include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 ## Start an FastCGI server for php (needs the php5-cgi package)
 fastcgi.server    = ( ".rb" => 
 	((
-		"bin-path" => "/home/tachibana/devel/ruby/twoB/twob-fcgi.rb",
+		"bin-path" => "~/devel/ruby/twoB/trunk/twob-fcgi.rb",
 		"socket" => "/tmp/tachibana-twob.socket",
 		"idle-timeout" => 20,
 		"max-procs" => 2,
