JBBS::ThreadService#cache_fileはcache_sourceに戻した JBBS::Delta#bytesの実装が空っぽだったので修正 ファイルオープン時にバイナリモードを明示していなかったので修正
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@530 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Fri Oct 09 13:03:21 JST 2009
+#Sat Nov 14 23:25:13 JST 2009
 eclipse.preferences.version=1
+encoding//local/spec_cache/jbbs.livedoor.jp=EUC-JP
 encoding//testData/2ch=MS932
 encoding//testData/jbbs=EUC-JP
 encoding/<project>=UTF-8
