ビルドを多少改善 lighttpdをローカルで起動するscriptを追加
git-svn-id: svn://192.168.0.6/devel/twoB/trunk@531 76a50abd-922d-c547-bfb4-6bf47a98db6f

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -5,7 +5,7 @@ server.modules              = (
 
 ## a static document-root, for virtual-hosting take look at the 
 ## server.virtual-* options
-server.document-root       = "/home/tachibana/devel/ruby"
+server.document-root       = "/home/tachibana/devel/twoB/trunk"
 
 ## files to check for if .../ is requested
 index-file.names           = ( "index.php", "index.html",
@@ -22,10 +22,10 @@ static-file.exclude-extensions = (".rb", ".php", ".pl", ".fcgi" )
 ######### Options that are good to be but not neccesary to be changed #######
 
 server.port               = 8081
-server.bind                = "localhost"
+#server.bind                = "localhost"
 
 ## to help the rc.scripts
-server.pid-file            = "lighttpd/lighttpd.pid"
+server.pid-file            = "local/lighttpd/lighttpd.pid"
 
 ## virtual directory listings
 dir-listing.encoding        = "utf-8"
@@ -44,8 +44,9 @@ include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 ## Start an FastCGI server for php (needs the php5-cgi package)
 fastcgi.server    = ( ".rb" => 
 	((
-		"bin-path" => "/home/tachibana/devel/ruby/twoB/twob-fcgi.rb",
-		"socket" => "/tmp/tachibana-twob.socket",
+		"bin-path" => "/home/tachibana/devel/twoB/trunk/twob-fcgi.rb",
+		"host" => "127.0.0.1",
+		"port" => 8082,
 		"idle-timeout" => 20,
 		"max-procs" => 2,
 		"min-procs" => 2,
