--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Sat Apr 24 22:51:05 JST 2010
+#Wed Aug 04 19:23:16 JST 2010
 eclipse.preferences.version=1
+encoding//demo/pc12.2ch.net=windows-31j
 encoding//testData/2ch=Windows-31J
 encoding//testData/jbbs=EUC-JP
 encoding/<project>=UTF-8
