lighttpd.confの設定から絶対パスとユーザー名を除去

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -5,7 +5,7 @@ server.modules              = (
 
 ## a static document-root, for virtual-hosting take look at the 
 ## server.virtual-* options
-server.document-root       = "/home/tachibana/devel/twoB/trunk"
+server.document-root       = "./"
 
 ## files to check for if .../ is requested
 index-file.names           = ( "index.php", "index.html",
@@ -42,11 +42,10 @@ server.groupname           = "tachibana"
 include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 
 ## Start an FastCGI server for php (needs the php5-cgi package)
-fastcgi.server    = ( ".rb" => 
+fastcgi.server    = ( "/twoB/action" =>
 	((
-		"bin-path" => "/home/tachibana/devel/twoB/trunk/twob-fcgi.rb",
-		"host" => "127.0.0.1",
-		"port" => 8082,
+		"bin-path" => "./fastcgi.rb",
+		"socket" => "/tmp/ruby-fcgi.socket",
 		"idle-timeout" => 20,
 		"max-procs" => 2,
 		"min-procs" => 2,
