unixソケットの名前を修正

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -32,10 +32,10 @@ dir-listing.encoding        = "utf-8"
 server.dir-listing          = "enable"
 
 ## change uid to <uid> (default: don't care)
-server.username            = "tachibana"
+#server.username            = "www-data"
 
 ## change uid to <uid> (default: don't care)
-server.groupname           = "tachibana"
+#server.groupname           = "www-data"
 
 #### external configuration files
 ## mimetype mapping
@@ -45,7 +45,7 @@ include_shell "/usr/share/lighttpd/create-mime.assign.pl"
 fastcgi.server    = ( "/twoB/action" =>
 	((
 		"bin-path" => "./fastcgi.rb",
-		"socket" => "/tmp/ruby-fcgi.socket",
+		"socket" => "/tmp/twob-fcgi.socket",
 		"idle-timeout" => 20,
 		"max-procs" => 2,
 		"min-procs" => 2,
