余計なファイルを公開しないようにdocument_rootを./webに変更

--- a/lighttpd/lighttpd.conf
+++ b/lighttpd/lighttpd.conf
@@ -5,7 +5,7 @@ server.modules              = (
 
 ## a static document-root, for virtual-hosting take look at the 
 ## server.virtual-* options
-server.document-root       = "./"
+server.document-root       = "./web"
 
 ## files to check for if .../ is requested
 index-file.names           = ( "index.php", "index.html",
